--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-type-animation": "^3.1.0",
 		"redux-persist": "^6.0.0",
 		"sass": "^1.66.1",
+		"slick-carousel": "^1.8.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
