--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"mui-file-input": "^3.0.0",
 		"path": "^0.12.7",
 		"react": "^18.2.0",
+		"react-cropper": "^2.3.3",
 		"react-device-detect": "^2.2.3",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.1.2",
