--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"redux-persist": "^6.0.0",
 		"sass": "^1.66.1",
 		"slick-carousel": "^1.8.1",
+		"socket.io-client": "^4.7.2",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
