--- a/package.json
+++ b/package.json
@@ -3,36 +3,35 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@emotion/react": "^11.11.1",
-		"@emotion/styled": "^11.11.0",
-		"@fontsource/roboto": "^5.0.8",
-		"@mui/icons-material": "^5.14.3",
-		"@mui/material": "^5.14.5",
-		"@mui/x-date-pickers": "^6.11.2",
-		"@reduxjs/toolkit": "^1.9.5",
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"axios": "^1.4.0",
-		"dayjs": "^1.11.9",
-		"express": "^4.18.2",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.1",
+		"@fontsource/roboto": "^5.2.6",
+		"@mui/icons-material": "^7.3.2",
+		"@mui/material": "^7.3.2",
+		"@mui/x-date-pickers": "^8.11.1",
+		"@reduxjs/toolkit": "^2.9.0",
+		"@testing-library/jest-dom": "^6.8.0",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"axios": "^1.11.0",
+		"dayjs": "^1.11.18",
+		"express": "^5.1.0",
 		"express-favicon": "^2.0.4",
-		"mui-file-input": "^3.0.0",
 		"path": "^0.12.7",
-		"react": "^18.2.0",
+		"react": "^19.1.1",
 		"react-cropper": "^2.3.3",
 		"react-device-detect": "^2.2.3",
-		"react-dom": "^18.2.0",
-		"react-redux": "^8.1.2",
-		"react-router-dom": "^6.15.0",
-		"react-scripts": "5.0.1",
-		"react-slick": "^0.29.0",
-		"react-type-animation": "^3.1.0",
+		"react-dom": "^19.1.1",
+		"react-redux": "^9.2.0",
+		"react-router-dom": "^7.8.2",
+		"react-scripts": "^5.0.1",
+		"react-slick": "^0.31.0",
+		"react-type-animation": "^3.2.0",
 		"redux-persist": "^6.0.0",
-		"sass": "^1.66.1",
+		"sass": "^1.92.1",
 		"slick-carousel": "^1.8.1",
-		"socket.io-client": "^4.7.2",
-		"web-vitals": "^2.1.4"
+		"socket.io-client": "^4.8.1",
+		"web-vitals": "^5.1.0"
 	},
 	"scripts": {
 		"dev": "react-scripts start",
