--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
 		"web-vitals": "^5.1.0"
 	},
 	"scripts": {
-		"dev": "react-scripts start",
-		"start": "node server.js",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
